--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "marked": "0.2.5",
     "temp": "0.4.0",
     "github": "0.1.4",
-    "request": "2.10.0"
+    "request": "2.10.0",
+    "semver": "1.0.14"
   }
 }
