Add the ability to download and extract the documentation files for a version.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "marked": "0.2.5",
     "temp": "0.4.0",
     "request": "2.10.0",
-    "semver": "1.0.14"
+    "semver": "1.0.14",
+    "tar": "~0.1.13"
   }
 }
